logs/mrsd_ros_tutorials/build.make.096.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘bool ImageConverter::saveDataCB(mrsd_ros_tutorials::SaveData::Request&, mrsd_ros_tutorials::SaveData::Response&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:114:5: error: ‘ros_pc’ was not declared in this scope
     ros_pc = pcl::PointCloud<pcl::PointXYZRGB>::Ptr(new pcl::PointCloud<pcl::PointXYZRGB>);
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:115:5: error: ‘ToROSMsg’ is not a member of ‘pcl’
     pcl::ToROSMsg(*kinect_color_pc, *ros_pc);
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘void segment_bin(const Ptr&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:42:23: error: ‘input_pc’ was not declared in this scope
   pass.setInputCloud (input_pc);
                       ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:71:9: error: ‘kinect_color_pc’ was not declared in this scope
         kinect_color_pc = srv.response.point_cloud;
         ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
